--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
+node_modules
+.DS_Store
+yarn.lock
+package-lock.json
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+build
